# vet-assistant

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT-NATIVE.md  DEPLOYMENT-README.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.yml  nginx.conf.example  start_backend.sh  start_frontend.sh  test_integration.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  init.sql  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  seed_data.py  wait-for-db.sh
backend/alembic/: env.py
backend/alembic/versions/: 50c5da35f496_add_slug_to_session.py  541c253e17eb_initial_migration.py  71f8e48123c4_add_patient_data_and_collection_phase_.py  9d694507a6d6_add_student_fields_to_users.py  a8b9c1d2e3f4_add_dog_breeds_consultation_reasons.py  c88638c28854_add_status_and_follow_up_question_to_.py  fb07855b60c0_add_authentication_system.py
backend/scripts/: init_db.py
backend/src/: __init__.py  main.py
backend/src/application/: __init__.py  create_session_command.py  create_session_handler.py  get_session_by_slug_query.py  get_session_handler.py  get_session_messages_handler.py  get_session_messages_query.py  get_session_query.py  send_message_command.py  send_message_handler.py
backend/src/application/auth/: __init__.py  get_user_query.py  get_user_sessions_query.py  (+7 more)
backend/src/domain/: __init__.py  repositories.py
backend/src/infrastructure/: __init__.py  database.py  repositories.py
backend/src/presentation/: __init__.py  auth_router.py  dependencies.py  router.py  schemas.py
backend/tests/: test_main.py
(+70 files in other folders)
